<resources>
    <string name="app_name">wanandroid</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_name">未登陆</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="mine_collection">我的收藏</string>
    <string name="common_website">常用网站</string>
    <string name="setting">设置</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="sign_out">退出登录</string>

    <string name="title_home">首页</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_system">体系</string>
    <string name="title_public">公众号</string>
    <string name="title_navigation">导航</string>
    <string name="title_project">项目</string>
    <string name="login">登录</string>
    <string name="registered">注册</string>
    <string name="action_search">action_search</string>
    <string name="wan_android">玩android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <!--loadingView-->
    <string name="str_none" />
    <string name="loading">Loading…</string>
    <string name="load_failed">Load failed. click to retry!</string>
    <string name="load_failed_no_network">网络请求失败，请检查您的网络</string>
    <string name="empty">Empty!</string>
    <string name="reload">重新加载</string>
</resources>
