<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_system"
        android:icon="@drawable/ic_system"
        android:title="@string/title_system" />

    <item
        android:id="@+id/navigation_public"
        android:icon="@drawable/ic_public"
        android:title="@string/title_public" />


    <item
        android:id="@+id/navigation_navigation"
        android:icon="@drawable/ic_navigation"
        android:title="@string/title_navigation" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/ic_project"
        android:title="@string/title_project" />
</menu>
