<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/bg_login_page"
        android:orientation="vertical"
        android:padding="32dp">

        <EditText
            android:id="@+id/ed_username"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableStart="@drawable/ic_user_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#BDBDBD" />


        <EditText
            android:id="@+id/ed_password"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableEnd="@drawable/ic_visibility_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="#BDBDBD" />

        <EditText
            android:id="@+id/ed_confirm_password"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableEnd="@drawable/ic_visibility_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_registered"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/bg_login_btn_red"
        android:text="@string/registered"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />


</LinearLayout>